--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: inter_knot
 description: 绳网是一个游戏、技术交流平台
 publish_to: none
 version: 2.16.9+36.1
-repository: https://github.com/share121/inter_knot
+repository: https://github.com/zxalter1/inter_knot
 
 environment:
   sdk: ">=3.4.4 <4.0.0"
